Fixed scrollbar issue

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -726,7 +726,7 @@ nav.breadcrumbs {
   width: 100%;
   position: relative;
   height: calc(60vh + 59.19px);
-  overflow-y: scroll;
+  overflow-y: auto;
   @include breakpoint(large) {
     height: calc(70vh + 59.19px);
   }
@@ -743,9 +743,9 @@ nav.breadcrumbs {
 }
 
 .toggle-caption-img .toggle-caption .orbit-caption {
-  max-height: 60vh;
+  max-height: 61vh;
   @include breakpoint(large) {
-    max-height: 70vh;
+    max-height: 71vh;
   }
 }
 
